--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 audit_header: false
 title: Fort Wayne's Best Real Estate Training
-description: David Brough, a top Real Estate Agent in Fort Wayne, shares his/her own internal real estate agent training for free. His/Her Real Estate Training, Tips and Advice will help you sell more homes in less time.
+description: David Brough, a top Real Estate Agent in Fort Wayne, shares his own internal real estate agent training for free. Her Real Estate Training, Tips and Advice will help you sell more homes in less time.
 show_custom_links: true
 custom_links:
   - title: Join Our Team
