Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -27,7 +27,7 @@ client:
   phone_type:
   phone2:
   phone2_type:
-  email: david@anthonyrealtors.com
+  email: careers@anthonyrealtors.com
   url: http://www.davidbrough.com
 
 lender:
