Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -28,7 +28,7 @@ client:
   phone2:
   phone2_type:
   email: careers@anthonyrealtors.com
-  url: http://www.davidbrough.com
+  url: http://www.fortwaynehomehub.com
 
 lender:
   show_section: false
