Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -42,7 +42,7 @@ lender:
 
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/davidbroughrealtor
+  facebook_url: https://www.facebook.com/fortwaynerealestatemastermind
   linkedin_url: https://www.linkedin.com/in/david-brough-a9770654/
   gplus_url:
   youtube_url:
