--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -49,7 +49,7 @@ socials:
   twitter_url: https://twitter.com/davidbrough
   instagram_url: https://www.instagram.com/anthonyrealtors/
   pinterest_url:
-  zillow_url: https://www.zillow.com/profile/DaveBrough/
+  zillow_url:
   trulia_url:
   yelp_url:
   podcast_url:
