--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,6 +14,8 @@ custom_links:
     url: /subscribe/
   - title: Events
     url: 'https://www.eventbrite.com/o/anthony-realtors-17737743094'
+  - title: Agent Launch
+    url: /agent-launch/
 client:
   name: David Brough
   title:
